==> eldufdo/STM32_ST7735/src/st7735.c <==
#include <string.h> // For memcpy
#include "stm32f30x_gpio.h"
#include "stm32f30x_rcc.h"
#include "stm32f30x_spi.h"
#include "stm32f30x_conf.h"
#include "delay.h"
#include "st7735.h"
#include "font5x7.h"
#include "img.h"

void ST7735_write(uint8_t data) {
	while (SPI_I2S_GetFlagStatus(SPI_PORT,SPI_I2S_FLAG_TXE) == RESET);
	//SPI_I2S_SendData16(SPI_PORT,data);
	SPI_SendData8(SPI_PORT,data);
}

void ST7735_Init(void) {

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1,ENABLE);
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA,ENABLE);
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB,ENABLE);
	// Configure and enable SPI
	SPI_InitTypeDef SPI;
	SPI.SPI_Mode = SPI_Mode_Master;
	SPI.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;
	SPI.SPI_Direction = SPI_Direction_1Line_Tx;
	SPI.SPI_CPOL = SPI_CPOL_Low;
	SPI.SPI_CPHA = SPI_CPHA_1Edge;
	SPI.SPI_CRCPolynomial = 7;
	SPI.SPI_DataSize = SPI_DataSize_8b;
	SPI.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI.SPI_NSS = SPI_NSS_Soft;

	SPI_Init(SPI_PORT,&SPI);
	// NSS must be set to '1' due to NSS_Soft settings (otherwise it will be Multimaster mode).
	SPI_NSSInternalSoftwareConfig(SPI_PORT,SPI_NSSInternalSoft_Set);
	SPI_Cmd(SPI_PORT,ENABLE);

	GPIO_InitTypeDef PORT;
	PORT.GPIO_Mode = GPIO_Mode_OUT;
	PORT.GPIO_Speed = GPIO_Speed_50MHz;
	GPIOA->AFR[0] |= 1431306240;

	// Configure SPI pins
	PORT.GPIO_Pin = SPI_SCK_PIN | SPI_MOSI_PIN;
	PORT.GPIO_Mode = GPIO_Mode_AF;
	PORT.GPIO_PuPd = GPIO_PuPd_NOPULL;
	PORT.GPIO_OType = GPIO_OType_PP;

	GPIO_Init(SPI_GPIO_PORT,&PORT);
	PORT.GPIO_Mode = GPIO_Mode_OUT;

	PORT.GPIO_Pin = ST7735_CS_PIN;
	GPIO_Init(ST7735_CS_PORT,&PORT);
	PORT.GPIO_Pin = ST7735_RST_PIN;
	GPIO_Init(ST7735_RST_PORT,&PORT);
	PORT.GPIO_Pin = ST7735_A0_PIN;
	GPIO_Init(ST7735_A0_PORT,&PORT);

	// Reset display
	CS_H();
	RST_H();
	Delay_ms(5);
	RST_L();
	Delay_ms(5);
	RST_H();
	CS_H();
	Delay_ms(5);
	CS_L();
	ST7735_cmd(0x11); // Sleep out & booster on
	Delay_ms(255); // Datasheet says what display wakes about 120ms (may be much faster actually)

	ST7735_cmd(0xb1);   // In normal mode (full colors):
	A0_H();
	ST7735_write(0x05); //   RTNA set 1-line period: RTNA2, RTNA0
	ST7735_write(0x3c); //   Front porch: FPA5,FPA4,FPA3,FPA2
	ST7735_write(0x3c); //   Back porch: BPA5,BPA4,BPA3,BPA2

	ST7735_cmd(0xb2);   // In idle mode (8-colors):
	A0_H();
	ST7735_write(0x05); //   RTNB set 1-line period: RTNAB, RTNB0
	ST7735_write(0x3c); //   Front porch: FPB5,FPB4,FPB3,FPB2
	ST7735_write(0x3c); //   Back porch: BPB5,BPB4,BPB3,BPB2

	ST7735_cmd(0xb3);   // In partial mode + full colors:
	A0_H();
	ST7735_write(0x05); //   RTNC set 1-line period: RTNC2, RTNC0
	ST7735_write(0x3c); //   Front porch: FPC5,FPC4,FPC3,FPC2
	ST7735_write(0x3c); //   Back porch: BPC5,BPC4,BPC3,BPC2
	ST7735_write(0x05); //   RTND set 1-line period: RTND2, RTND0
	ST7735_write(0x3c); //   Front porch: FPD5,FPD4,FPD3,FPD2
	ST7735_write(0x3c); //   Back porch: BPD5,BPD4,BPD3,BPD2

	ST7735_cmd(0xB4);   // Display dot inversion control:
	ST7735_data(0x03);  //   NLB,NLC

	ST7735_cmd(0x3a);   // Interface pixel format
	//	ST7735_data(0x03);  // 12-bit/pixel RGB 4-4-4 (4k colors)
	ST7735_data(0x05);  // 16-bit/pixel RGB 5-6-5 (65k colors)
	//	ST7735_data(0x06);  // 18-bit/pixel RGB 6-6-6 (256k colors)

	//	ST7735_cmd(0x36);   // Memory data access control:
	//   MY MX MV ML RGB MH - -
	//	ST7735_data(0x00);  //   Normal: Top to Bottom; Left to Right; RGB
	//	ST7735_data(0x80);  //   Y-Mirror: Bottom to top; Left to Right; RGB
	//	ST7735_data(0x40);  //   X-Mirror: Top to Bottom; Right to Left; RGB
	//	ST7735_data(0xc0);  //   X-Mirror,Y-Mirror: Bottom to top; Right to left; RGB
	//	ST7735_data(0x20);  //   X-Y Exchange: X and Y changed positions
	//	ST7735_data(0xA0);  //   X-Y Exchange,Y-Mirror
	//	ST7735_data(0x60);  //   X-Y Exchange,X-Mirror
	//	ST7735_data(0xE0);  //   X-Y Exchange,X-Mirror,Y-Mirror

	ST7735_cmd(0x20);   // Display inversion off
	//	ST7735_cmd(0x21);   // Display inversion on

	ST7735_cmd(0x13);   // Partial mode off

	ST7735_cmd(0x26);   // Gamma curve set:
	ST7735_data(0x01);  //   Gamma curve 1 (G2.2) or (G1.0)
	//	ST7735_data(0x02);  //   Gamma curve 2 (G1.8) or (G2.5)
	//	ST7735_data(0x04);  //   Gamma curve 3 (G2.5) or (G2.2)
	//	ST7735_data(0x08);  //   Gamma curve 4 (G1.0) or (G1.8)

	ST7735_cmd(0x29);   // Display on

	CS_H();

	ST7735_Orientation(scr_normal);
}

void ST7735_PutChar5x7(uint16_t X, uint16_t Y, uint8_t chr, uint16_t color,uint16_t bgcolor,uint8_t scale) {
	uint16_t i,j;
	uint8_t buffer[5];
	uint8_t CH = color >> 8;
	uint8_t CL = (uint8_t)color;
	uint8_t BGCH = bgcolor >> 8;
	uint8_t BGCL = (uint8_t)bgcolor;
	memcpy(buffer,&Font5x7[(chr - 32) * 5],5);

	CS_L();
	ST7735_AddrSet(X,Y,X + (scale * 5) - 1,Y + (scale * 7) -1);
	A0_H();
	for (j = 0; j < 7; j++) {
		for (i = 0; i < 5; i++) {
			if ((buffer[i] >> j) & 0x01) {
				uint8_t s = 0;
				for (s = 0; s < scale; s++) {
					ST7735_write(CH);
					ST7735_write(CL);
				}
			} else {
				uint8_t s = 0;
				for (s = 0; s < scale; s++) {
					ST7735_write(BGCH);
					ST7735_write(BGCL);
				}
			}
		}
	}
	CS_H();
}
