==> Lymes/stm32vfo/Src/st7735/st7735.c <==
#include "st7735/st7735.h"
#include "st7735/dwt_stm32_delay.h"
#include "stm32f1xx_ll_spi.h"
#define delay_us(microseconds) DWT_Delay_us(microseconds)

void ST7735_write(uint8_t data)
{
	//	while (LL_DMA_IsEnabledChannel(DMA1, LL_DMA_CHANNEL_5)) {}
	//	uint8_t tt = data;
	//	LL_DMA_SetMemoryAddress(DMA1, LL_DMA_CHANNEL_5, (uint32_t) &tt);
	//	LL_DMA_SetDataLength(DMA1, LL_DMA_CHANNEL_5, 1);
	//	LL_DMA_EnableChannel(DMA1, LL_DMA_CHANNEL_5);

	while (!LL_SPI_IsActiveFlag_TXE(SPI_PORT))
	{
	}
	LL_SPI_TransmitData8(SPI_PORT, data);
	//while (LL_SPI_IsActiveFlag_OVR(SPI_PORT)) {}
	LL_SPI_ClearFlag_OVR(SPI2); // clear overrun flag
	while (LL_SPI_IsActiveFlag_BSY(SPI_PORT))
	{
	}
}

void ST7735_Init(void)
{
	DWT_Delay_Init();
	LL_SPI_Enable(SPI_PORT);
	//	LL_SPI_EnableDMAReq_TX(SPI_PORT);
	//	LL_SPI_EnableDMAReq_RX(SPI_PORT);
	//	LL_DMA_EnableIT_TC(DMA1, LL_DMA_CHANNEL_5);
	//	LL_DMA_EnableIT_HT(DMA1, LL_DMA_CHANNEL_5);
	//	LL_DMA_EnableIT_TE(DMA1, LL_DMA_CHANNEL_5);

	// Reset display
	CS_H();
	RST_H();
	delay_us(500);
	RST_L();
	delay_us(500);
	RST_H();
	CS_H();
	delay_us(500);
	CS_L();

	ST7735_cmd(0x11); // Sleep out, booster on
	delay_us(20);

	ST7735_cmd(0xb1); // In normal mode (full colors):
	A0_H();
	//	ST7735_write(0x05);   //   RTNA set 1-line period: RTNA2, RTNA0
	//	ST7735_write(0x3c);   //   Front porch: FPA5,FPA4,FPA3,FPA2
	//	ST7735_write(0x3c);   //   Back porch: BPA5,BPA4,BPA3,BPA2
	ST7735_write(0x00); //   fastest refresh
	ST7735_write(0x06); //   6 lines front porch
	ST7735_write(0x03); //   3 lines backporch

	ST7735_cmd(0xb2); // In idle mode (8-colors):
	A0_H();
	ST7735_write(0x05); //   RTNB set 1-line period: RTNAB, RTNB0
	ST7735_write(0x3c); //   Front porch: FPB5,FPB4,FPB3,FPB2
	ST7735_write(0x3c); //   Back porch: BPB5,BPB4,BPB3,BPB2

	ST7735_cmd(0xb3); // In partial mode + full colors:
	A0_H();
	ST7735_write(0x05); //   RTNC set 1-line period: RTNC2, RTNC0
	ST7735_write(0x3c); //   Front porch: FPC5,FPC4,FPC3,FPC2
	ST7735_write(0x3c); //   Back porch: BPC5,BPC4,BPC3,BPC2
	ST7735_write(0x05); //   RTND set 1-line period: RTND2, RTND0
	ST7735_write(0x3c); //   Front porch: FPD5,FPD4,FPD3,FPD2
	ST7735_write(0x3c); //   Back porch: BPD5,BPD4,BPD3,BPD2

	ST7735_cmd(0xb6); // display settings #5
	A0_H();
	ST7735_write(0x15); // 1 clock cycle nonoverlap, 2 cycle gate rise, 3 cycle oscil. equalize
	ST7735_write(0x02); // fix on VTL

	ST7735_cmd(0xB4);  // Display dot inversion control:
	ST7735_data(0x03); //   NLB,NLC

	ST7735_cmd(0x3a); // Interface pixel format
	//ST7735_data(0x03);    // 12-bit/pixel RGB 4-4-4 (4k colors)
	ST7735_data(0x05); // 16-bit/pixel RGB 5-6-5 (65k colors)
	//ST7735_data(0x06);    // 18-bit/pixel RGB 6-6-6 (256k colors)

	//ST7735_cmd(0x36);     // Memory data access control:
	// MY MX MV ML RGB MH - -
	//ST7735_data(0x00);    // Normal: Top to Bottom; Left to Right; RGB
	//ST7735_data(0x80);    // Y-Mirror: Bottom to top; Left to Right; RGB
	//ST7735_data(0x40);    // X-Mirror: Top to Bottom; Right to Left; RGB
	//ST7735_data(0xc0);    // X-Mirror,Y-Mirror: Bottom to top; Right to left; RGB
	//ST7735_data(0x20);    // X-Y Exchange: X and Y changed positions
	//ST7735_data(0xA0);    // X-Y Exchange,Y-Mirror
	//ST7735_data(0x60);    // X-Y Exchange,X-Mirror
	//ST7735_data(0xE0);    // X-Y Exchange,X-Mirror,Y-Mirror

	ST7735_cmd(0x20); // Display inversion off
	//ST7735_cmd(0x21);     // Display inversion on

	ST7735_cmd(0x13); // Partial mode off

	ST7735_cmd(0x26); // Gamma curve set:
	//ST7735_data(0x01);    // Gamma curve 1 (G2.2) or (G1.0)
	ST7735_data(0x02); // Gamma curve 2 (G1.8) or (G2.5)
	//ST7735_data(0x04);    // Gamma curve 3 (G2.5) or (G2.2)
	//ST7735_data(0x08);    // Gamma curve 4 (G1.0) or (G1.8)

	ST7735_cmd(0x29); // Display on

	CS_H();

	ST7735_Orientation(scr_normal);
}

void ST7735_PutChar5x7(uint8_t scale, uint16_t X, uint16_t Y, uint8_t chr,
					   uint16_t color, uint16_t bgcolor)
{
	uint16_t i, j;
	uint8_t buffer[5];
	uint8_t CH = color >> 8;
	uint8_t CL = (uint8_t)color;
	uint8_t BCH = bgcolor >> 8;
	uint8_t BCL = (uint8_t)bgcolor;

	if ((chr >= 0x20) && (chr <= 0x7F))
	{
		// ASCII[0x20-0x7F]
		memcpy(buffer, &Font5x7[(chr - 32) * 5], 5);
	}
	else if (chr >= 0xA0)
	{
		// CP1251[0xA0-0xFF]
		memcpy(buffer, &Font5x7[(chr - 64) * 5], 5);
	}
	else
	{
		// unsupported symbol
		memcpy(buffer, &Font5x7[160], 5);
	}

	CS_L();

	// scale equals 1 drawing faster
	if (scale == 1)
	{
		ST7735_AddrSet(X, Y, X + 5, Y + 7);
		A0_H();
		for (j = 0; j < 7; j++)
		{
			for (i = 0; i < 5; i++)
			{
				if ((buffer[i] >> j) & 0x01)
				{
					ST7735_write(CH);
					ST7735_write(CL);
				}
				else
				{
					ST7735_write(BCH);
					ST7735_write(BCL);
				}
			}
			// vertical spacing
			ST7735_write(BCH);
			ST7735_write(BCL);
		}

		// horizontal spacing
		for (i = 0; i < 6; i++)
		{
			ST7735_write(BCH);
			ST7735_write(BCL);
		}
	}
	else
	{
		A0_H();
		for (j = 0; j < 7; j++)
		{
			for (i = 0; i < 5; i++)
			{
				// pixel group
				if ((buffer[i] >> j) & 0x01)
					ST7735_FillRect(X + (i * scale), Y + (j * scale),
									X + (i * scale) + scale - 1,
									Y + (j * scale) + scale - 1,
									((buffer[i] >> j) & 0x01) ? color : bgcolor);
			}
			// vertical spacing
			//      ST7735_FillRect(X + (i * scale), Y + (j * scale), X + (i * scale) + scale - 1, Y + (j * scale) + scale - 1, V_SEP);
			//ST7735_FillRect(X + (i * scale), Y + (j * scale), X + (i * scale) + scale - 1, Y + (j * scale) + scale - 1, bgcolor);
		}
		// horizontal spacing
		//    ST7735_FillRect(X, Y + (j * scale), X + (i * scale) + scale - 1, Y + (j * scale) + scale - 1, H_SEP);
		//ST7735_FillRect(X, Y + (j * scale), X + (i * scale) + scale - 1, Y + (j * scale) + scale - 1, bgcolor);
	}
	CS_H();
}
